Updated recipe site - drink now won't take up extra space when not loaded in - changed pixel format to fit with current design - fixed meal image to show as a square and be more in line with the other blocks

--- a/react/src/SCSS/HeaderFooter.scss
+++ b/react/src/SCSS/HeaderFooter.scss
@@ -91,9 +91,12 @@
         justify-self: center;
         display: flex;
         justify-content: center;
-
+        position: sticky;
         background-color: #FFFFFF;
-
+        bottom: 0;
+        right: 0;
+        left: 0;
+    
         border: 2px solid #FE91C6;
         border-radius: 5px;
         box-shadow: 5px 5px 0px grey;
